# aimassist

./: CMakeLists.txt  README.md
include/: detector.h  transform.h  window.h
src/: CMakeLists.txt  detector.cpp  main.cpp  transform.cpp  window.cpp
